# E2E_Digit_Recognizer

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini
api/: csv_export.py  main.py  schemas.py  services.py
app/: model.py  preprocess.py
cli/: batch_test.py  client.py  single_test.py  utils.py
common/: config.py  database.py  preprocess.py  utils.py
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml  nginx.conf
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: predict.js
frontend/src/components/: BatchPredict.vue  History.vue  SinglePredict.vue
frontend/src/locales/: en.json  zh-CN.json
frontend/tests/api/: predict.test.js
frontend/tests/components/: App.test.js  BatchPredict.test.js  History.test.js  SinglePredict.test.js
frontend/tests/e2e/: app.spec.js
models/: digit_recognizer.pth
onnx_quantization/: batch_test.py  calibration_data.py  deployment.py  model.py  quantization.py  utils.py
quantized_models/: quantized_digit_recognizer.onnx
scripts/: benchmark_pytorch.py  generate_accuracy_report.py  generate_benchmark_chart.py
tests/: conftest.py  test_api.py  test_api_endpoints.py  test_cli_utils.py  test_csv_export.py  test_database.py  test_performance.py  test_preprocess.py  test_schemas.py  test_services.py  test_utils.py
training/Full_FT/: args.py  dataloader.py  experiments.py  main.py  model.py  trainer.py
training/Full_FT/model_output/: old_model.pth
training/initial_training/: args.py  dataloader.py  experiments.py  main.py  trainer.py
