[project]
name = "digit-recognizer_quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.135.3",
    "gunicorn>=26.0.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "onnx>=1.21.0",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.7.0",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
